feat: openapi security
